--- a/app.json
+++ b/app.json
@@ -1,5 +1,14 @@
 {
   "expo": {
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ],
+      "expo-font"
+    ],
     "name": "weatherapp",
     "slug": "weatherapp",
     "version": "1.0.0",
